logo and propmt update

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <!-- Header -->
     <header>
-        <img src="icon.png" alt="SmartQuiz Logo" class="logo">
+        <img src="favicon.jpg" alt="SmartQuiz Logo" class="logo">
         <h1>SmartQuiz</h1>
         <p class="tagline">Turn Text into Interactive Quizzes</p>
     </header>
@@ -17,7 +17,7 @@
     <!-- Prompt Instruction Section -->
     <section class="prompt-section">
         <h3>How to Generate Quiz Questions</h3>
-        <p>Copy the following prompt, customize the number of questions, and paste it into ChatGPT to generate quiz content.</p>
+        <p>Copy the following prompt, customize the number of questions, and paste it into ChatGPT and attach your pdf to generate quiz content.</p>
         <div class="prompt-container">
             <textarea id="promptText" readonly>
                 Upon receiving a PDF document, extract the relevant information to generate a set of 50 Difficult multiple-choice questions in the following format:   (make sure the option from A starts from a newline ) 
@@ -69,7 +69,7 @@
     <!-- Footer -->
     <footer>
         <p>&copy; 2024 SmartQuiz. All rights reserved.</p>
-        <p>Inspired by Nana ❤️ | Contact me <a href="mailto:valentineallpowers@gmail.com">Here</a> but what for 🙂 </p>
+        <p>Inspired by Nana ❤️  Made by Valentine  | Contact me <a href="mailto:valentineallpowers@gmail.com">Here</a> but what for 🙂 </p>
     </footer>
     
     <script src="script.js"></script>
