--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <!-- Footer -->
     <footer>
         <p>&copy; 2024 SmartQuiz. All rights reserved.</p>
-        <p>Inspired by Nana ❤️  Made by Valentine  | Contact me <a href="mailto:valentineallpowers@gmail.com">Here</a> but what for 🙂 </p>
+        <p>Inspired by Nana ❤️  Made by Valentine  | Contact me <a href="mailto:valentineallpowers@gmail.com">Here</a> but for what ? 🙂 </p>
     </footer>
     
     <script src="script.js"></script>
