--- a/index.html
+++ b/index.html
@@ -66,7 +66,9 @@
         </div>
     </main>
     
-    <!-- Footer -->
+
+
+    <!-- Footer aspect  -->
     <footer>
         <p>&copy; 2024 SmartQuiz. All rights reserved.</p>
         <p>Inspired by Nana ❤️  Made by Valentine  | Contact me <a href="mailto:valentineallpowers@gmail.com">Here</a> but for what ? 🙂 </p>
